test/bad/initialization2.prog
// initial definition for nonexisting symbol

stream main
input 
state 
output 
    print = 'a'
initial 
    buf = "Hello world!", 
    print = 'a'

